# HSE_Image_Processor

./: CMakeLists.txt  base_filter.cpp  base_filter.h  bitmap.cpp  bitmap.h  colour_filter.cpp  colour_filter.h  command_line_parser.cpp  command_line_parser.h  filter_pipeline_maker.cpp  filter_pipeline_maker.h  image_processor.cpp  readme.md  sharpening_filter.cpp  sharpening_filter.h  size_filters.cpp  size_filters.h
